update some field

--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
                 <span id="skill_title" className="heading"> JavaScript </span>
               </h1>
             </div>
+             <div class="skills_card">
+              <div class="image_div">
+                <img src="image/type3script.png" alt="" />
+              </div>
+              <h1 class="skills_text">
+                <span id="skill_title" className="heading"> TypeScript </span>
+              </h1>
+            </div>
+             <div class="skills_card">
+              <div class="image_div">
+                <img src="image/nextjs.png" alt="" />
+              </div>
+              <h1 class="skills_text">
+                <span id="skill_title" className="heading"> Nextjs </span>
+              </h1>
+            </div>
             <div class="skills_card">
               <div class="image_div">
                 <img src="image/react1.png" alt="" />
